--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" integrity="sha512-BnbUDfEUfV0Slx6TunuB042k9tuKe3xrD6q4mg5Ed72LTgzDIcLPxg6yI2gcMFRyomt+yJJxE+zJwNmxki6/RA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Paint Board</title>
-    <link rel="icon" type="image/x-icon" href="/Icons/paint-palette-svgrepo-com.svg">
+    <link rel="icon" type="image/x-icon" href="/Icons/paint-palette-svgrepo-com.svg?">
 </head>
 <body>
     <div class="hamburger-menu">
